src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__typed_enums_with_initializers_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@x = global i8 0
@y = global i16 0
@z = global i32 0
@red = global i8 1
@yellow = global i8 2
@green = global i8 3
@red.1 = global i16 10
@yellow.2 = global i16 11
@green.3 = global i16 12
@red.4 = global i32 22
@yellow.5 = global i32 33
@green.6 = global i32 44

