src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__typed_enums_with_partly_initializers_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

@twenty = unnamed_addr constant i16 20
@x = global i8 0
@MyEnum.red = unnamed_addr constant i8 7
@MyEnum.yellow = unnamed_addr constant i8 8
@MyEnum.green = unnamed_addr constant i8 9
@MyEnum.a = unnamed_addr constant i8 0
@MyEnum.b = unnamed_addr constant i8 1
@MyEnum.c = unnamed_addr constant i8 7
@MyEnum.d = unnamed_addr constant i8 8
@MyEnum.e = unnamed_addr constant i8 9
@MyEnum.f = unnamed_addr constant i8 20
@MyEnum.g = unnamed_addr constant i8 21
