src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__using_const_expression_in_range_type.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i16 }

@CONST = global i16 7
@MIN = global i16 7
@prg_instance = global %prg zeroinitializer

define signext i16 @CheckRangeSigned(i16 signext %0, i16 signext %1, i16 signext %2) {
entry:
  %CheckRangeSigned = alloca i16, align [filtered]
  %value = alloca i16, align [filtered]
  store i16 %0, ptr %value, align [filtered]
  %lower = alloca i16, align [filtered]
  store i16 %1, ptr %lower, align [filtered]
  %upper = alloca i16, align [filtered]
  store i16 %2, ptr %upper, align [filtered]
  store i16 0, ptr %CheckRangeSigned, align [filtered]
  %load_value = load i16, ptr %value, align [filtered]
  store i16 %load_value, ptr %CheckRangeSigned, align [filtered]
  %CheckRangeSigned_ret = load i16, ptr %CheckRangeSigned, align [filtered]
  ret i16 %CheckRangeSigned_ret
}

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %load_MIN = load i16, ptr @MIN, align [filtered]
  %1 = sext i16 %load_MIN to i32
  %tmpVar = add i32 %1, 1
  %2 = trunc i32 %tmpVar to i16
  %call = call signext i16 @CheckRangeSigned(i16 signext 5, i16 signext 0, i16 signext %2)
  store i16 %call, ptr %x, align [filtered]
  ret void
}
