src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__using_global_consts_in_expressions.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@cA = unnamed_addr constant i16 1
@cB = unnamed_addr constant i16 2
@cC = unnamed_addr constant i16 3
@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i32 6, i32* %z, align [filtered]
  ret void
}
