src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__variable_length_strings_using_constants_can_be_created.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { [16 x i8], [4 x i8], [31 x i16], [7 x i16] }

@LONG_STRING = global i16 15
@SHORT_STRING = global i16 3
@prg_instance = global %prg_interface { [16 x i8] zeroinitializer, [4 x i8] c"xyz\00", [31 x i16] zeroinitializer, [4 x i16] [i16 120, i16 121, i16 122, i16 0] }

define void @prg(%prg_interface* %0) {
entry:
  %y = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  %z = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 1
  %wy = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 2
  %wz = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 3
  store [12 x i8] c"im a genius\00", [16 x i8]* %y, align 1
  store [12 x i16] [i16 105, i16 109, i16 32, i16 97, i16 32, i16 103, i16 101, i16 110, i16 105, i16 117, i16 115, i16 0], [31 x i16]* %wy, align 2
  ret void
}

