src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__variable_with_same_name_as_data_type.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prog = type { i32 }

@prog_instance = global %prog zeroinitializer

define i32 @func() {
entry:
  %func = alloca i32, align [filtered]
  %TIME = alloca i32, align [filtered]
  store i32 0, ptr %TIME, align [filtered]
  store i32 0, ptr %func, align [filtered]
  %func_ret = load i32, ptr %func, align [filtered]
  ret i32 %func_ret
}

define void @prog(ptr %0) {
entry:
  %TIME = getelementptr inbounds nuw %prog, ptr %0, i32 0, i32 0
  ret void
}
