src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__while_loop_with_if_exit.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  br label %while_body

while_body:                                       ; preds = %continue5, %entry
  %load_x = load i32, ptr %x, align [filtered]
  %tmpVar = icmp slt i32 %load_x, 20
  %1 = zext i1 %tmpVar to i8
  %2 = icmp ne i8 %1, 0
  %tmpVar2 = xor i1 %2, true
  br i1 %tmpVar2, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body8, %condition_body
  ret void

condition_body:                                   ; preds = %while_body
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue1

continue1:                                        ; preds = %buffer_block, %while_body
  %load_x3 = load i32, ptr %x, align [filtered]
  %tmpVar4 = add i32 %load_x3, 1
  store i32 %tmpVar4, ptr %x, align [filtered]
  %load_x6 = load i32, ptr %x, align [filtered]
  %tmpVar7 = icmp sge i32 %load_x6, 10
  %3 = zext i1 %tmpVar7 to i8
  %4 = icmp ne i8 %3, 0
  br i1 %4, label %condition_body8, label %continue5

condition_body8:                                  ; preds = %continue1
  br label %continue

buffer_block9:                                    ; No predecessors!
  br label %continue5

continue5:                                        ; preds = %buffer_block9, %continue1
  br label %while_body
}
