src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__while_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  br label %condition_check

condition_check:                                  ; preds = %entry, %continue1
  br i1 true, label %while_body, label %continue

while_body:                                       ; preds = %condition_check
  %load_x = load i8, i8* %x, align [filtered]
  %1 = icmp ne i8 %load_x, 0
  %tmpVar = xor i1 %1, true
  br i1 %tmpVar, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body, %condition_check
  ret void

condition_body:                                   ; preds = %while_body
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue1

continue1:                                        ; preds = %buffer_block, %while_body
  %load_x2 = load i8, i8* %x, align [filtered]
  br label %condition_check
}
