src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__while_with_expression_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  br label %while_body

while_body:                                       ; preds = %continue1, %entry
  %load_x = load i8, ptr %x, align [filtered]
  %1 = zext i8 %load_x to i32
  %tmpVar = icmp eq i32 %1, 0
  %2 = zext i1 %tmpVar to i8
  %3 = icmp ne i8 %2, 0
  %tmpVar2 = xor i1 %3, true
  br i1 %tmpVar2, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body
  ret void

condition_body:                                   ; preds = %while_body
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue1

continue1:                                        ; preds = %buffer_block, %while_body
  %load_x3 = load i8, ptr %x, align [filtered]
  br label %while_body
}
